Fix hero spacing

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html {
   scroll-behavior: smooth !important;
 }
 body {
-  /* min-width: 360px; */
+  padding-top: 0 !important;
 }
 
 /* section spacing utils */
@@ -155,15 +155,12 @@ strong:hover {
 /* end sidebar */
 
 /* hero section  */
-@media screen and (max-width: 500px) {
-  #hero {
-    margin-top: 100px;
-  }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 640px) {
   #hero h1 {
-    font-size: 3.5rem !important;
+    font-size: 1.5rem !important;
+  }
+  #hero p {
+    font-size: 1rem !important;
   }
 }
 /* end hero section  */
